emily and yuyan works

--- a/Final Project Code - Used Cars.ipynb
+++ b/Final Project Code - Used Cars.ipynb
@@ -7061,12 +7061,123 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a67c9ff7",
    "metadata": {},
    "source": [
-    "### AdaBoost & Gradient boosting\n",
+    "### CatBoost\n",
     "*By YuYan Zhang*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebf931f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import catboost as cb\n",
+    "from catboost import CatBoostRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f197cd5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_pool = cb.Pool(X_train,y_train)\n",
+    "test_pool = cb.Pool(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d27e8774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cb1 = CatBoostRegressor(loss_function='RMSE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129b6bba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cb1.fit(train_pool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b063e254",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train\n",
+    "print(\"Train RMSE:\", mean_squared_error(y_train, cb1.predict(train_pool), squared = False))\n",
+    "print(\"Train R-squared:\",r2_score(y_train, cb1.predict(train_pool)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1696cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "print(\"Test RMSE:\", mean_squared_error(y_test, cb1.predict(test_pool), squared = False))\n",
+    "print(\"Test R-squared:\",r2_score(y_test, cb1.predict(test_pool)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "544dc2a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_importance = cb1.feature_importances_\n",
+    "sorted_idx = np.argsort(feature_importance)\n",
+    "fig = plt.figure(figsize=(12, 6))\n",
+    "plt.barh(range(len(sorted_idx)), feature_importance[sorted_idx], align='center')\n",
+    "plt.yticks(range(len(sorted_idx)), np.array(X_test.columns)[sorted_idx])\n",
+    "plt.title('Feature Importance')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51270dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cb2 = CatBoostRegressor()\n",
+    "\n",
+    "# cb_params = {'learning_rate':[0.01, 0.1],\n",
+    "#          'depth': [4, 7, 10],\n",
+    "#          'l2_leaf_reg': [2, 6, 10],\n",
+    "#          'random_strength': [0, 5, 10]\n",
+    "# }\n",
+    "\n",
+    "# cb_search_result = cb2.grid_search(cb_params, \n",
+    "#                                        X=X_train, \n",
+    "#                                        y=y_train, \n",
+    "#                                        plot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72eadb18",
+   "metadata": {},
+   "source": [
+    "After visualizing the GridSearch results, we found that there continues to be the trend of way higher performance on train data, while test performance hovered around the same range. Therefore, we decided keep the untuned model."
    ]
   },
   {
@@ -7076,6 +7187,184 @@
    "source": [
     "### XGBoost\n",
     "*By Emily Leibfritz*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980d4030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "param_grid = {'max_depth': [8],\n",
+    "              'learning_rate': [0.08,0.09,0.1],\n",
+    "               'reg_lambda':[0.09],\n",
+    "                'n_estimators':[510,515,520,530],\n",
+    "                'gamma': [0.1,0.2],\n",
+    "                'subsample': [0.75,0.8],\n",
+    "                'colsample_bytree': [0.75,0.8]}\n",
+    "\n",
+    "cv = KFold(n_splits=5,shuffle=True,random_state=4)\n",
+    "optimal_params = GridSearchCV(estimator=xgb.XGBRegressor(random_state=4),                                                       \n",
+    "                             param_grid = param_grid,\n",
+    "                             verbose = 1,\n",
+    "                             n_jobs=-1,\n",
+    "                             cv = cv)\n",
+    "optimal_params.fit(X_train,y_train)\n",
+    "print(\"Optimal parameter values =\", optimal_params.best_params_)\n",
+    "print(\"Optimal cross validation R-squared = \",optimal_params.best_score_)\n",
+    "print(\"Time taken = \", round((time.time()-start_time)/60), \" minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4824a0de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(mean_squared_error(optimal_params.best_estimator_.predict(X_test),y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92fc2ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XGBoost_model = xgb.XGBRegressor(random_state = 4, colsample_bytree =0.8, gamma = 0.2, learning_rate = 0.09, \n",
+    "                                 max_depth = 8, n_estimators = 510, reg_lambda = 0.09, subsample = 0.8)\n",
+    "XGBoost_model.fit(X_train,y_train,eval_set = ([(X_test, y_test)]), early_stopping_rounds = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be9df924",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "XGB_bagged = BaggingRegressor(base_estimator=XGBoost_model, \n",
+    "                             n_estimators=20,\n",
+    "                             bootstrap=False,\n",
+    "                            random_state=4,\n",
+    "                            n_jobs = -1).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d44a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(mean_squared_error(XGB_bagged.predict(X_test),y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "97bac027",
+   "metadata": {},
+   "source": [
+    "### LGBM\n",
+    "*By Emily Leibfritz*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae70a2b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lightgbm import LGBMRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0393886d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LGMB_model=LGBMRegressor(random_state=4).fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44c1a104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(mean_squared_error(LGMB_model.predict(X_test),y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aa14da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#K-fold cross validation to find optimal parameters for LightGBM regressor\n",
+    "start_time = time.time()\n",
+    "param_grid = {'max_depth': [4,5,6,7,8],\n",
+    "              'num_leaves': [50,60,70,80,90,100,110,120,130,170,200],\n",
+    "              'learning_rate': [0.05, 0.07,0.09,0.1,0.12,0.15],\n",
+    "               'reg_lambda':[4,5,6,7,8,9,10],\n",
+    "                'n_estimators':[800,900,1000,1100,1200,1300,1400,1500],\n",
+    "                'reg_alpha': [1,2,3,4,5,6,7,8,9,10],\n",
+    "                'subsample': [0.70, 0.75,0.8],\n",
+    "                'colsample_bytree': [0.70,0.75,0.8, 0.9]}\n",
+    "\n",
+    "cv = KFold(n_splits=5,shuffle=True,random_state=1)\n",
+    "optimal_params = RandomizedSearchCV(estimator=LGBMRegressor(random_state=1),                                                       \n",
+    "                             param_distributions = param_grid, n_iter = 200,\n",
+    "                             verbose = 1,\n",
+    "                             n_jobs=-1,\n",
+    "                             cv = cv)\n",
+    "optimal_params.fit(X_train,y_train)\n",
+    "print(\"Optimal parameter values =\", optimal_params.best_params_)\n",
+    "print(\"Optimal cross validation R-squared = \",optimal_params.best_score_)\n",
+    "print(\"Time taken = \", round((time.time()-start_time)/60), \" minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6767a7cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(mean_squared_error(optimal_params.best_estimator_.predict(X_test),y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e61f74ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LGBM_bagged = BaggingRegressor(base_estimator=optimal_params.best_estimator_, \n",
+    "                             n_estimators=20,\n",
+    "                             bootstrap=False,\n",
+    "                            random_state=4,\n",
+    "                            n_jobs = -1).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aa79606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(mean_squared_error(LGBM_bagged.predict(X_test),y_test))"
    ]
   },
   {
