completed project code b4 ensemble

--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "---\n",
     "title: \"Project Report\"\n",
-    "subtitle: Team name\n",
-    "author: Author 1, Author 2, Author 3, and Author 4 \n",
+    "subtitle: dat_sci\n",
+    "author: Hiba Khatib, Emily Leibfritz, Nicole Birova, and YuYan Zhang \n",
     "date: 05/23/2023\n",
     "number-sections: true\n",
     "abstract: _The ABSTRACT is to be in fully-justified italicized text at the top of the report, below the author information. The abstract section must summarise the problem statement, the developed model(s), the metric(s) optimized and the recommendations to the stakeholders based on the model (if any). You may also briefly mention any major EDA-based insights that helped develop the model or directly translated into recommendations to the stakeholders. However, the abstract must not be more than 200 words in length_.\n",
@@ -64,12 +64,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "90e0d976",
+   "metadata": {},
+   "source": [
+    "Since buying a used car requires a level of trust between buyers and sellers, it's difficult to know what a good price is. We want to make a tool that buyers and sellers can use to facilitate the exchange.\n",
+    "\n",
+    "This is also useful for us as college students and young people in the workforce with limited budgets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84ff1421",
    "metadata": {},
    "source": [
     "## Problem statement \n",
     "\n",
     "Describe your problem statement. Articulate your objectives using absolutely no jargon. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4132a107",
+   "metadata": {},
+   "source": [
+    "The car industry is vast, and venturing into buying or selling a car can often be challenging, especially as the used car market is even harder to keep track off. Therefore, we want to create a model that can give potential buyers and sellers on overview of what to expect in price range."
    ]
   },
   {
@@ -83,11 +101,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cecc6368",
+   "metadata": {},
+   "source": [
+    "The data we will use is from Kaggle https://www.kaggle.com/datasets/ananaymital/us-used-cars-dataset. The original dataset has 3 million observations but we randomly sampled 6000 observations to used as our test and train data. This will help solve the problem because as it containts the price as well as ~50 other charactersitics describing cars that were sold used. From this data, we can build a model predicting car price to help potential sellers adjust heir expectations and potential buyers to get a reasonable price range for the car they are expecting to buy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c255035",
    "metadata": {},
    "source": [
     "## Stakeholders\n",
-    "Who cares? If you are successful, what difference will it make to them?"
+    "Who cares? If you are successful, what difference will it make to them?\n",
+    "\n",
+    "*by Hiba Khatib* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46fc668f",
+   "metadata": {},
+   "source": [
+    "Our stakeholders are used car buyers, seller, and third-parties that enable these exchanges. This will help sellers and buyers make informed decisions about what a reasonable price for the car is. \n",
+    "\n"
    ]
   },
   {
