--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e0d976",
+   "id": "9e0dfda3",
    "metadata": {},
    "source": [
     "Since buying a used car requires a level of trust between buyers and sellers, it's difficult to know what a good price is. We want to make a tool that buyers and sellers can use to facilitate the exchange.\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4132a107",
+   "id": "35adf942",
    "metadata": {},
    "source": [
     "The car industry is vast, and venturing into buying or selling a car can often be challenging, especially as the used car market is even harder to keep track off. Therefore, we want to create a model that can give potential buyers and sellers on overview of what to expect in price range."
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cecc6368",
+   "id": "756ac5d3",
    "metadata": {},
    "source": [
     "The data we will use is from Kaggle https://www.kaggle.com/datasets/ananaymital/us-used-cars-dataset. The original dataset has 3 million observations but we randomly sampled 6000 observations to used as our test and train data. This will help solve the problem because as it containts the price as well as ~50 other charactersitics describing cars that were sold used. From this data, we can build a model predicting car price to help potential sellers adjust heir expectations and potential buyers to get a reasonable price range for the car they are expecting to buy."
@@ -120,11 +120,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46fc668f",
+   "id": "399252ab",
    "metadata": {},
    "source": [
-    "Our stakeholders are used car buyers, seller, and third-parties that enable these exchanges. This will help sellers and buyers make informed decisions about what a reasonable price for the car is. \n",
-    "\n"
+    "Our stakeholders are used car buyers, seller, and third-parties that enable these exchanges. \n",
+    "\n",
+    "Understanding the used cars market is important for several reasons, and developing a machine learning tool that predicts the price of a used car can be valuable for both individuals and used car dealerships. Here are some ways that our tool is significant: \n",
+    "\n",
+    "1. Informed Decision-Making: For individuals looking to buy or sell a used car, having knowledge about the current market conditions, trends, and prices is crucial. Understanding the used cars market allows buyers to make informed decisions regarding the fair value of a vehicle they are interested in purchasing. Similarly, sellers can accurately assess the appropriate price to ask for their used car, ensuring they receive a fair deal.\n",
+    "\n",
+    "2. Fair Pricing: Predicting the price of a used car using machine learning can help establish fair and reasonable prices for both buyers and sellers. By considering various factors such as the car's make, model, year, mileage, and condition, our can provide an estimate that aligns with the prevailing market rates. This promotes transparency and prevents unfair price manipulation.\n",
+    "\n",
+    "3. Time and Cost Savings: For buyers, a machine learning tool can save time and effort by quickly providing estimated prices for a wide range of used cars. Instead of manually researching and comparing prices, potential buyers can use the tool to narrow down their options and focus on vehicles within their budget. For sellers, having a reliable price prediction tool eliminates the need for extensive market research and allows them to set competitive prices efficiently.\n",
+    "\n",
+    "4. Negotiation Power: When buying or selling a used car, negotiations are often involved. Having access to a machine learning tool that predicts prices empowers both parties during the negotiation process. Buyers can negotiate based on market insights, ensuring they are not overpaying, while sellers can justify their asking price with data-driven estimates.\n",
+    "\n",
+    "5. Business Optimization: Used car dealerships can greatly benefit from a machine learning tool that predicts prices. It allows dealerships to assess the value of trade-ins accurately, determine competitive pricing strategies, and optimize inventory management. By understanding market trends and fluctuations, dealerships can make informed decisions that maximize profitability and customer satisfaction.\n",
+    "\n",
+    "6. Risk Mitigation: Predicting the price of used cars can also help mitigate risk for both buyers and sellers. Buyers can avoid purchasing a vehicle at an inflated price by comparing the predicted price with the seller's offer. Sellers, on the other hand, can ensure they do not undervalue their vehicles and receive fair compensation for their assets.\n",
+    "\n",
+    "Overall, understanding the used cars market and having a machine learning tool to predict prices is beneficial for individuals and used car dealerships. It facilitates informed decision-making, establishes fair pricing, saves time and effort, enhances negotiation power, optimizes business operations, and mitigates risks in the used car market."
    ]
   },
   {
@@ -133,6 +148,7 @@
    "metadata": {},
    "source": [
     "## Data quality check / cleaning / preparation \n",
+    "*by Hiba Khatib*\n",
     "\n",
     "Show the distribution of the response here. Report the standard deviation and mean in case of a regression problem, and proportion of 0s and 1s in case of classification.\n",
     "\n",
@@ -238,20 +254,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea422beb",
+   "id": "b78fbd0e",
    "metadata": {},
    "source": [
-    "### Lasso, Ridge & Catboost\n",
-    "*By Sylvia Sherwood*"
+    "### CatBoost \n",
+    "*By Yuan Zhang*"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b78fbd0e",
+   "id": "5644f01a",
    "metadata": {},
    "source": [
-    "### AdaBoost & LightGBM\n",
-    "*By Sankaranarayanan Balasubramanian*"
+    "I used the cleaned data above and found the base CatBoost had very good performance with a train RMSE of 1199 and test RMSE of 2056. I thought it might be overfitting, so I used GridSearch to see if it could be better tuned. However, with the grid I set, the test RMSE all hovered around 2000 and 2500, while train RMSE was between 1000 and 1500 or overfitting even more with train RMSE under 1000. Therefore, I decided to use the base model as the final model.\n",
+    "\n",
+    "Before making the CatBoost model, I also made AdaBoost and GradBoost models, but since performance was subpar to CatBoost, I decided not to attempt tuning them and focus on CatBoost instead."
    ]
   },
   {
@@ -282,11 +299,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0339570f",
+   "metadata": {},
+   "source": [
+    "### Decision Trees & CCP\n",
+    "*by Nicole Birova*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37f552ef",
    "metadata": {},
    "source": [
-    "### XGBoost\n",
-    "*By Ryu Kimiko*"
+    "### XGBoost & LightGBm\n",
+    "*By Emily Liebfritz*"
    ]
   },
   {
@@ -452,7 +478,7 @@
     "    <td>Hiba Khatib</td>\n",
     "    <td>MARS, Bagging MARS, Random Forest</td>\n",
     "    <td>Data cleaning & preparation, EDA, Feature Selection</td>    \n",
-    "    <td>Cleaned all numerical data, numerical data visualizations & EDA, response visualizations and transformation, feature selection and tree based models/MARS feature selection </td>\n",
+    "    <td>Cleaned all numerical data, numerical data visualizations & EDA, response visualizations and transformation, feature selection and tree based models/MARS feature selection, significant parts of report</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Sankaranarayanan Balasubramanian</td>\n",
