--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -798,11 +798,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d39c782c",
    "metadata": {},
    "source": [
-    "# DO THIS!\n",
     "## Approach \n",
     "\n",
     "What kind of a models did you use? What performance metric(s) did you optimize and why?\n",
@@ -814,6 +814,21 @@
     "Did your problem already have solution(s) (posted on Kaggle or elsewhere). If yes, then how did you build upon those solutions, what did you do differently? Is your model better as compared to those solutions in terms of prediction accuracy or your chosen metric?\n",
     "\n",
     "**Important: Mention any code repositories (with citations) or other sources that you used, and specifically what changes you made to them for your project.**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0ffc732b",
+   "metadata": {},
+   "source": [
+    "We employed various models to predict the price of used cars based on a dataset containing relevant metrics. The models used included CatBoost, MARS (Multivariate Adaptive Regression Splines), bagged MARS, decision tree models, bagged decision tree models, decision tree models with cost-complexity pruning, XGBoost, LightGBM, and ensemble models. Our goal was to optimize the root mean squared error (RMSE) as the performance metric.\n",
+    "\n",
+    "The choice of RMSE as the optimization metric is common in regression problems, as it provides a measure of how well the predicted values align with the actual values. By minimizing RMSE, we aimed to create models that produce accurate price predictions for the used cars. Regarding the approach, we utilized a range of models to explore different algorithms' capabilities and compare their performance. While using multiple models is not necessarily unorthodox, it allowed us to assess the strengths and weaknesses of each algorithm and select the most suitable ones for our dataset. Anticipated problems in the project included issues such as overfitting, underfitting, feature selection, handling missing values, and dealing with categorical variables. Additionally, some models might suffer from computational inefficiency or require extensive parameter tuning for optimal performance. Ensuring the dataset's quality, avoiding data leakage, and implementing appropriate cross-validation techniques were also important considerations.\n",
+    "\n",
+    "During the project, we encountered challenges such as dataset preprocessing, feature engineering, and handling categorical variables, which required careful attention and thoughtful techniques. Some models performed better with certain subsets of features, and hyperparameter tuning was crucial to achieve optimal results. Computational limitations, such as the time required to train complex models, were also factors to consider.\n",
+    "\n",
+    "We did not build upon existing solutions; although our dataset was from Kaggle, the \"solutions\" on the website were more exploratory-based, and did not help us with any of our EDA or modeling we chose to do."
    ]
   },
   {
@@ -1062,11 +1077,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c85ead90",
    "metadata": {},
    "source": [
-    "# DO THIS!\n",
     "Are you confident that you found the optimal hyperparameter values for each of your individual models, and that your individual models cannot be better tuned? Or, are there any models that could be better tuned if you had more time / resources, but you are limited by the amount of time you can spend on the course project *(equivalent to one assignment)*? If yes, then which models could be better tuned and how?\n",
     "\n",
     "Will it be possible / convenient / expensive for the stakeholders to collect the data relating to the predictors in the model. Using your model, how soon will the stakeholder be able to predict the outcome before the outcome occurs. For example, if the model predicts the number of bikes people will rent in Evanston on a certain day, then how many days before that day will your model be able to make the prediction. This will depend on how soon the data that your model uses becomes available. If you are predicting election results, how many days / weeks / months / years before the election can you predict the results. \n",
@@ -1075,13 +1090,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "f6026cb7",
+   "id": "bbf1a6a6",
    "metadata": {},
    "source": [
-    "## Other sections *(optional)*\n",
+    "Yes, it is possible that even though we found optimal hyperparameter values for our individual models, there could still be room for further tuning to improve their performance. Hyperparameter tuning is an iterative process that aims to find the best combination of hyperparameter values for a given model. However, due to time limitations, it is not always feasible to exhaustively explore the entire hyperparameter space. We can settle for near-optimal values that significantly improve the model's performance but may not be the absolute best.\n",
     "\n",
-    "You are welcome to introduce additional sections or subsections, if required, to address any specific aspects of your project in detail. For example, you may briefly discuss potential future work that the research community could focus on to make further progress in the direction of your project's topic."
+    "In our case, if we had more time and resources, models such as CatBoost, XGBoost, LightGBM, and the ensemble models could potentially benefit from additional hyperparameter tuning. These models often have a wide range of hyperparameters that can influence their performance. Fine-tuning these hyperparameters through search techniques could potentially lead to improved model performance.\n",
+    "\n",
+    "Regarding the convenience and cost of collecting predictor data, it would depend on the specific situation and the availability of the required information. Since the model predicts car prices based on car details, if the stakeholders already have access to the necessary car details, then the data required for prediction is readily available. Therefore, once the stakeholders provide the car details, the model can quickly provide an accurate price prediction. The convenience and cost of data collection would primarily depend on the stakeholder's ability to access and provide the required car details.\n",
+    "\n",
+    "As for the obsolescence of the model, it will depend on the stability and evolution of the used car market and associated metrics. If the factors affecting car prices change significantly over time, the model may become less accurate and lose its usefulness. Additionally, if the dataset used to train the model becomes outdated or no longer representative of the current market dynamics, the model's performance may decline. It is crucial to regularly monitor and update the model using fresh data to ensure its relevance and usefulness. The frequency of updates will depend on the rate of change in the market and the availability of new data."
    ]
   },
   {
@@ -1110,6 +1130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5505da5c",
    "metadata": {},
@@ -1161,10 +1182,10 @@
     "    <td>Cleaned and observed categorical data trends, categorical data visualizations & EDA, XGBoost and LGBM models, Lasso/Ridge analysis.</td>\n",
     "  </tr>\n",
     "    <tr>\n",
-    "    <td>Name</td>\n",
-    "    <td></td>\n",
-    "    <td></td>    \n",
-    "    <td></td>\n",
+    "    <td>Nicole Birova</td>\n",
+    "    <td>Decision Trees, Bagging Decision Trees, Decision Trees with Cost-Complexity Pruning</td>\n",
+    "    <td>Writing the report, writing the initial proposal</td>    \n",
+    "    <td>Ran numerous models for decision trees, multiple versions of bagged decision trees, and decision trees with cost-complexity pruning. Contributed to significant parts of report, and wrote the initial proposal.</td>\n",
     "  </tr>\n",
     "    <tr>\n",
     "    <td>Name</td>\n",
