--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -803,17 +803,7 @@
    "id": "d39c782c",
    "metadata": {},
    "source": [
-    "## Approach \n",
-    "\n",
-    "What kind of a models did you use? What performance metric(s) did you optimize and why?\n",
-    "\n",
-    "Is there anything unorthodox / new in your approach? \n",
-    "\n",
-    "What problems did you anticipate? What problems did you encounter? \n",
-    "\n",
-    "Did your problem already have solution(s) (posted on Kaggle or elsewhere). If yes, then how did you build upon those solutions, what did you do differently? Is your model better as compared to those solutions in terms of prediction accuracy or your chosen metric?\n",
-    "\n",
-    "**Important: Mention any code repositories (with citations) or other sources that you used, and specifically what changes you made to them for your project.**"
+    "## Approach "
    ]
   },
   {
@@ -1070,19 +1060,6 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "c85ead90",
-   "metadata": {},
-   "source": [
-    "Are you confident that you found the optimal hyperparameter values for each of your individual models, and that your individual models cannot be better tuned? Or, are there any models that could be better tuned if you had more time / resources, but you are limited by the amount of time you can spend on the course project *(equivalent to one assignment)*? If yes, then which models could be better tuned and how?\n",
-    "\n",
-    "Will it be possible / convenient / expensive for the stakeholders to collect the data relating to the predictors in the model. Using your model, how soon will the stakeholder be able to predict the outcome before the outcome occurs. For example, if the model predicts the number of bikes people will rent in Evanston on a certain day, then how many days before that day will your model be able to make the prediction. This will depend on how soon the data that your model uses becomes available. If you are predicting election results, how many days / weeks / months / years before the election can you predict the results. \n",
-    "\n",
-    "When will your model become too obsolete to be useful?"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "bbf1a6a6",
    "metadata": {},
    "source": [
@@ -1164,7 +1141,7 @@
     "    <td>Hiba Khatib</td>\n",
     "    <td>MARS, Bagging MARS, Random Forest</td>\n",
     "    <td>Data cleaning & preparation, EDA, Feature Selection</td>    \n",
-    "    <td>Cleaned all numerical data, numerical data visualizations & EDA, response visualizations and transformation, feature selection and tree based models/MARS feature selection, significant parts of report</td>\n",
+    "    <td>Cleaned all numerical data, numerical data visualizations & EDA, response visualizations and transformation, feature selection and tree based models/MARS feature selection, significant parts of report, parts of proposal</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Emily Leibfritz</td>\n",
