decision tree details

--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -982,6 +982,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "613a088b",
+   "metadata": {},
+   "source": [
+    "To start off with the decision tree models, I built a base model that had a corresponding test RMSE of 7258. The visualization corresponds to the base decision tree. Then, I went forward and built a decision tree without restriction, and started optimizing hyperparameters to tune the decision tree. I started with cross validation and ran the coarse grid optimization, scoring based on the mean squared error. After this, I looked into the mean squared error based on the hyperparameter values, as you can see in the plots. Using this, I did a fine grid search to get the RMSE you see on the slide. Surprisingly, the hyperparameters found in the coarse grid search did slightly better in terms of RMSE than the fine grid search RMSE. \n",
+    "\n",
+    "After running coarse and fine grid, I started running decision trees with cost-complexity pruning. I actually got the lowest RMSE of the three with this pruning. We can see how the depth of the tree and number of nodes corresponds to the alpha increasing, they are inversely proportional as we expected. I also included the graph of the accuracy of the model as alpha increases, which is similar for both the train and test data, but the model shows that the accuracy remains relatively high for most alpha values. \n",
+    "\n",
+    "Looking at Bagged decision trees, the RMSE’s began to become a lot lower than I expected. As you can see by the graph, the test RMSE began to reach numbers between 800 and 1200, while the R^2 stayed high at 0.98+. The train RMSE looked similar to what we have seen in past models, around 3500 or so. Once I found the optimal number of trees and the optimal hyperparameters, the final test RMSE was 1293. By using the cleaned data and features selected from mars, I was able to reduce any complications from variance and overfitting. The feature importance has remained the same across the models."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37f552ef",
    "metadata": {},
