--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -93,12 +93,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8c255035",
    "metadata": {},
    "source": [
     "## Stakeholders\n",
-    "Who cares? If you are successful, what difference will it make to them?\n",
     "\n",
     "*by Hiba Khatib* "
    ]
@@ -803,7 +803,9 @@
    "id": "d39c782c",
    "metadata": {},
    "source": [
-    "## Approach "
+    "## Approach \n",
+    "\n",
+    "*written by Nicole Birova* "
    ]
   },
   {
@@ -1063,11 +1065,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b46343d",
    "metadata": {},
    "source": [
-    "## Limitations of the model with regard to prediction"
+    "## Limitations of the model with regard to prediction\n",
+    "\n",
+    "*Written by Nicole Birova* "
    ]
   },
   {
@@ -1086,28 +1091,24 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62a185cb",
    "metadata": {},
    "source": [
-    "# DO THIS!\n",
-    "## Conclusions and Recommendations to stakeholder(s)\n",
-    "\n",
-    "What conclusions do you draw based on your model? You may draw conclusions based on prediction accuracy, or other performance metrics.\n",
-    "\n",
-    "How do you use those conclusions to come up with meaningful recommendations for stakeholders? The recommendations must be action-items for stakeholders that they can directly implement without any further analysis. Be as precise as possible. The stakeholder(s) are depending on you to come up with practically implementable recommendations, instead of having to think for themselves.\n",
-    "\n",
-    "If your recommendations are not practically implementable by stakeholders, how will they help them? Is there some additional data / analysis / domain expertise you need to do to make the recommendations implementable? \n",
-    "\n",
-    "Do the stakeholder(s) need to be aware about some limitations of your model? Is your model only good for one-time use, or is it possible to update your model at a certain frequency (based on recent data) to keep using it in the future? If it can be used in the future, then for how far into the future?"
+    "## Conclusions and Recommendations to stakeholder(s)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "0ca45613",
+   "id": "c6a4e10c",
    "metadata": {},
    "source": [
-    "Add details of each team member's contribution, other than the models contributed, in the table below."
+    "\n",
+    "After looking and comparing all our models, we found the car model to be the most important for predicting its price. With the help of the other predictors, we were able to narrow a good range for the possible price of a used car. This is confirmed by our R^2 values, which were consistently for all models over 0.8. For our purposes, the R^2 seemed to be the most important evaluation metric, as car prices are not necessarily something where accuracy is the most important. Our models provide a realistic starting point for the price of used cars, which then can be used by the buyers and sellers, with margin of error of the RMSE value  of the model. The actual end selling price of the car should lay in this range. And as the mean price of cars in  our dataset was around 20000, our RMSEs which ranged from ~2500-3000 provided a reasonable range.\n",
+    "\n",
+    "A limitation for stakeholders would be if they are missing information about the car, or are looking for a car which is not among the 42 car models used to build the model. In those cases, they could either choose a model that is similar to the one they want to buy/sell in price, or they could estimate the price based on the other factors known about the car."
    ]
   },
   {
@@ -1187,29 +1188,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebdb1aad",
-   "metadata": {},
-   "source": [
-    "List and number all bibliographical references. When referenced in the text, enclose the citation number in square brackets, for example [1].\n",
-    "\n",
-    "[1] Authors. The frobnicatable foo filter, 2014. Face and Gesture submission ID 324. Supplied as additional material\n",
-    "fg324.pdf. 3\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5831751c",
    "metadata": {},
    "source": [
     "## Appendix {-}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d13d374d",
-   "metadata": {},
-   "source": [
-    "You may put additional stuff here as Appendix. You may refer to the Appendix in the main report to support your arguments. However, the appendix section is unlikely to be checked while grading, unless the grader deems it necessary."
    ]
   }
  ],
