--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -93,7 +93,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8c255035",
    "metadata": {},
@@ -798,7 +797,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d39c782c",
    "metadata": {},
@@ -809,7 +807,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0ffc732b",
    "metadata": {},
@@ -974,7 +971,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "613a088b",
    "metadata": {},
@@ -1065,7 +1061,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1b46343d",
    "metadata": {},
@@ -1076,7 +1071,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bbf1a6a6",
    "metadata": {},
@@ -1091,7 +1085,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "62a185cb",
    "metadata": {},
@@ -1100,7 +1093,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c6a4e10c",
    "metadata": {},
@@ -1112,7 +1104,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5505da5c",
    "metadata": {},
@@ -1170,10 +1161,10 @@
     "    <td>Ran numerous models for decision trees, multiple versions of bagged decision trees, and decision trees with cost-complexity pruning. Contributed to significant parts of report, and wrote the initial proposal.</td>\n",
     "  </tr>\n",
     "    <tr>\n",
-    "    <td>Name</td>\n",
-    "    <td></td>\n",
-    "    <td></td>    \n",
-    "    <td></td> \n",
+    "    <td>Yuyan Zhang</td>\n",
+    "    <td>CatBoost, Boosting</td>\n",
+    "    <td>Writing the report, writing the initial proposal</td>    \n",
+    "    <td>AdaBoost and GradBoost for presentation. Contributed to proposal and report. Checked models for consistent dataset use.</td> \n",
     "  </tr>\n",
     "</table>"
    ]
