--- a/Final Project Report - Used Cars Regression.ipynb
+++ b/Final Project Report - Used Cars Regression.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Project Report\"\n",
+    "title: \"US Used Cars Regression\"\n",
     "subtitle: dat_sci\n",
     "author: Hiba Khatib, Emily Leibfritz, Nicole Birova, and YuYan Zhang \n",
     "date: 05/23/2023\n",
