--- a/dat_sci_report.ipynb
+++ b/dat_sci_report.ipynb
@@ -11,7 +11,7 @@
     "author: Hiba Khatib, Emily Leibfritz, Nicole Birova, and YuYan Zhang \n",
     "date: 05/23/2023\n",
     "number-sections: true\n",
-    "abstract: _The ABSTRACT is to be in fully-justified italicized text at the top of the report, below the author information. The abstract section must summarise the problem statement, the developed model(s), the metric(s) optimized and the recommendations to the stakeholders based on the model (if any). You may also briefly mention any major EDA-based insights that helped develop the model or directly translated into recommendations to the stakeholders. However, the abstract must not be more than 200 words in length_.\n",
+    "abstract: _This project predicts used car prices to help buyers and sellers come to an agreement of a reasonable price. Using a combination of models, we were able to reach a RMSE of approximately 2000. The most important predictors include the car model and trim, as well as how many miles have been driven._.\n",
     "format: \n",
     "  html:\n",
     "    toc: true\n",
